[gd_scene load_steps=21 format=3 uid="uid://bgu7jngue5ijv"]

[ext_resource type="Script" uid="uid://bxvos303uh5xs" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://b47o2ngvu0p32" path="res://scenes/killer.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://bhqjgpdg3i7oh" path="res://scenes/edwin.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://ol47hu6am6m6" path="res://scenes/boss1.tscn" id="3_dp3eg"]
[ext_resource type="PackedScene" uid="uid://b84cl52hdmu53" path="res://scenes/barrel.tscn" id="4_0ld40"]
[ext_resource type="PackedScene" uid="uid://bt7msd1u2v1s8" path="res://scenes/wall.tscn" id="5_gqmmt"]
[ext_resource type="AudioStream" uid="uid://bjjniclrrycsa" path="res://sounds/Metroid Dime.mp3" id="7_o6xl0"]
[ext_resource type="Texture2D" uid="uid://bh4v7hnc8ya0d" path="res://assets/buttons/controller button 55.png" id="8_ya4ey"]
[ext_resource type="Texture2D" uid="uid://df8fdihy5dmqe" path="res://assets/buttons/controller button 5.png" id="9_eb6dy"]
[ext_resource type="Texture2D" uid="uid://droryxu1a3rwy" path="res://assets/buttons/controller button 56.png" id="10_trceg"]
[ext_resource type="Texture2D" uid="uid://ckpsl7vlnhfsh" path="res://assets/buttons/controller button 6.png" id="11_a8y0u"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jyhfs"]
size = Vector3(10, 1, 200)

[sub_resource type="BoxMesh" id="BoxMesh_tefeu"]
size = Vector3(10, 1, 200)

[sub_resource type="BoxShape3D" id="BoxShape3D_tbgi4"]
size = Vector3(0.075, 0.437, 200)

[sub_resource type="BoxShape3D" id="BoxShape3D_tefeu"]
size = Vector3(0.191, 1, 200)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0wfyh"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_sugp2"]
noise = SubResource("FastNoiseLite_0wfyh")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0wfyh"]
sky_cover = SubResource("NoiseTexture2D_sugp2")

[sub_resource type="Sky" id="Sky_sugp2"]
sky_material = SubResource("ProceduralSkyMaterial_0wfyh")

[sub_resource type="Environment" id="Environment_jyhfs"]
background_mode = 2
sky = SubResource("Sky_sugp2")

[node name="Main" type="Node"]
script = ExtResource("1_sugp2")
killer = ExtResource("2_0wfyh")
boss1 = ExtResource("3_dp3eg")
barrel = ExtResource("4_0ld40")
wall = ExtResource("5_gqmmt")

[node name="Background" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.612378, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
shape = SubResource("BoxShape3D_jyhfs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
mesh = SubResource("BoxMesh_tefeu")

[node name="pareteSX" type="CollisionShape3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01, 0.416, 80)
shape = SubResource("BoxShape3D_tbgi4")

[node name="pareteDx" type="CollisionShape3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.975, 0.302, 80)
shape = SubResource("BoxShape3D_tefeu")

[node name="Edwin" parent="." instance=ExtResource("2_sugp2")]

[node name="Timer" type="Timer" parent="Edwin"]
wait_time = 0.221
autostart = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 6.69698e-08, -5.61943e-08, 0, 0.642788, 0.766045, 8.74228e-08, 0.766045, -0.642788, 0, 8, -2)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.173648, 0.984808, 0, -0.984808, -0.173648, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jyhfs")

[node name="Killer_spawn" type="Timer" parent="."]
autostart = true

[node name="Boss1_spawn" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Barrel_spawn" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Wall_spawn" type="Timer" parent="."]
wait_time = 20.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_o6xl0")
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
text = "Enemies killed: 0"

[node name="sx" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(100, 550)
texture_normal = ExtResource("8_ya4ey")
texture_pressed = ExtResource("9_eb6dy")
action = "ui_left"
visibility_mode = 1

[node name="dx" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(1000, 550)
texture_normal = ExtResource("10_trceg")
texture_pressed = ExtResource("11_a8y0u")
action = "ui_right"
visibility_mode = 1

[connection signal="timeout" from="Edwin/Timer" to="Edwin" method="_on_timer_timeout"]
[connection signal="timeout" from="Killer_spawn" to="." method="_on_killer_spawn_timeout"]
[connection signal="timeout" from="Boss1_spawn" to="." method="_on_boss_1_spawn_timeout"]
[connection signal="timeout" from="Barrel_spawn" to="." method="_on_barrel_spawn_timeout"]
[connection signal="timeout" from="Wall_spawn" to="." method="_on_wall_spawn_timeout"]
